1 Mars 2005 Mariette
- fixed  operator() for two points in In_smallest_orthogonal_sphere

1 Mars 2005 Mariette
- added operator() for two points in In_smallest_orthogonal_sphere

9 February 2005 Sylvain Pion
- Remove documentation of Triangulation_3 and TDS_3's destructors.

31 January 2005 Sylvain Pion
- Document .point() in TDS::Vertex.

14 January 2005 Sylvain Pion
- Added incident_facets(Vertex_handle).

07 January 2005 Sylvain Pion
- Doc : missing \\

19 December 2004 Sylvain Pion
- Fix example_tds when -DNDEBUG.

1 December 2004 Sylvain Pion
- doc [ref] : add separator for Links to the Reference Sections.

16 November 2004 Sylvain Pion
- Comment out Regular::remove() documentation, as it's not ready.
- Comment out Christophe's acknowledgement, for the same reason.
- Remove Andreas from the main authors list.

9 November 2004 Sylvain Pion
- Disable test_regular_as_delaunay_3 since remove is not ready yet.

7 November 2004 Sylvain Pion
- Regular::insert() : discard point when same xyz coordinates and
  same weight as an existing vertex.

6 November 2004 Sylvain Pion
- Add move_point() to Regular_3 (not documented because not tested yet).
- Add test-suite program test_regular_as_delaunay_3.

27 September 2004 Sylvain Pion
- Rename Triangulation_cell_base_with_hidden_points_3 into
  Regular_triangulation_cell_base_3.

20 September 2004 Andreas Fabri
- Made derivation in Regular_triangulation_euclidean_traits_3 public
- Add a short name macro for Regular_triangulation_filtered_traits_3.

15 September 2004 Sylvain Pion
- Remove unused code to please g++ 2.95.

14 September 2004 Sylvain Pion
- Specialize Regular_traits_3<> for Exact_pred_inexact_const_kernel, so that
  it becomes automatically the filtered traits (and thus gets better backward
  compat).

13 September 2004 Sylvain Pion
- Regular traits : make functor classes parameterized by K (meant to be the
  regular traits, or the kernel when WPs will be there).
- Add Regular_triangulation_filtered_traits_3.
